TrueDark: Several corrections
- Implement stripe effect for menus
- correct first stop on gradient on buttons
- correct shades on scrollbars for better accuracy
- Make switches not rounded and add a bit of shadow when flicked on

--- a/templates/TrueDark/gtk-3.0/gtk-widgets.css
+++ b/templates/TrueDark/gtk-3.0/gtk-widgets.css
@@ -213,18 +213,19 @@ column-header .button {
 }
 
 .scrollbar.slider {
-	border-color: shade(@entryselbg-color, 1.8);
-	background: -gtk-gradient(linear, 0 0, 0 1, color-stop(0.0,shade(@entryselbg-color,0.7)), 
-												color-stop(0.50,shade(@entryselbg-color,1.0)), 
-												color-stop(0.51,shade(@entryselbg-color,0.8)), 
-												color-stop(1.00,shade(@entryselbg-color,0.7)));
+	border-color: shade(@entryselbg-color, 0.7);
+	box-shadow: inset 0 0 0 1px shade(@entryselbg-color, 2.0);
+	background: -gtk-gradient(linear, 0 0, 0 1, color-stop(0.0,  shade(@entryselbg-color, 1.0)),
+												color-stop(0.50, shade(@entryselbg-color, 1.5)),
+												color-stop(0.50, shade(@entryselbg-color, 1.0)),
+												color-stop(1.00, shade(@entryselbg-color, 1.0)));
 }
 
 .scrollbar.slider.vertical {
-	background: -gtk-gradient(linear, 0 0, 1 0, color-stop(0.0,shade(@entryselbg-color,0.7)), 
-												color-stop(0.50,shade(@entryselbg-color,1.0)), 
-												color-stop(0.51,shade(@entryselbg-color,0.8)), 
-												color-stop(1.00,shade(@entryselbg-color,0.7)));
+	background: -gtk-gradient(linear, 0 0, 1 0, color-stop(0.0, shade(@entryselbg-color, 1.0)),
+												color-stop(0.50,shade(@entryselbg-color, 1.5)),
+												color-stop(0.50,shade(@entryselbg-color, 1.0)),
+												color-stop(1.00,shade(@entryselbg-color, 1.0)));
 }
 
 /*
@@ -327,7 +328,7 @@ GtkFrame
 .button, .slider {
 	border: 1px solid shade(@background-color,3.6);
 	padding: 4px 3px;
-	background: -gtk-gradient(linear, 0 0, 0 1, color-stop(0.0,shade(@background-color,1.2)), 
+	background: -gtk-gradient(linear, 0 0, 0 1, color-stop(0.0,shade(@background-color,1.5)), 
 												color-stop(0.50,shade(@background-color,1.5)), 
 												color-stop(0.51,shade(@background-color,1.2)), 
 												color-stop(1.00,shade(@background-color,1.3)));
@@ -337,7 +338,7 @@ GtkFrame
 .button:checked
 {
 	border: 1px solid shade(@background-color, 0.5);
-	background: -gtk-gradient(linear, 0 0, 0 1, color-stop(0.0,shade(@background-color,1.0)), 
+	background: -gtk-gradient(linear, 0 0, 0 1, color-stop(0.0,shade(@background-color,1.3)), 
 												color-stop(0.50,shade(@background-color,1.3)), 
 												color-stop(0.51,shade(@background-color,1.0)), 
 												color-stop(1.00,shade(@background-color,1.1)));
@@ -361,7 +362,7 @@ GtkFrame
 
 .notebook tab:active {
 	border: 1px solid shade(@background-color,3.6);
-	background: -gtk-gradient(linear, 0 0, 0 1, color-stop(0.0,shade(@background-color,1.2)), 
+	background: -gtk-gradient(linear, 0 0, 0 1, color-stop(0.0,shade(@background-color,1.5)), 
 												color-stop(0.50,shade(@background-color,1.5)), 
 												color-stop(0.51,shade(@background-color,1.2)), 
 												color-stop(1.00,shade(@background-color,1.3)));
@@ -457,12 +458,33 @@ GtkLabel, GtkLabel:insensitive {
 	background:none;
 }
 
-GtkTextView:selected, .entry:selected,
+GtkTextView:selected, .entry:selected
+{
+	color: @entryselfg-color;
+	background: @entryselbg-color;
+}
+
 .menu .menuitem:hover, .menubar.menuitem:hover, .menubar .menuitem:hover
 /*.cell:selected, GtkComboBox .cell:hover*/
 {
 	color: @entryselfg-color;
-	background-color: @entryselbg-color;
+	background: /* First gradient gives a soft "shading" effect, y coordinate inversely related with background-size height */
+	            -gtk-gradient(linear, 0 0, 0 0.5, color-stop(0.0, rgba(0, 0, 0, 0)),
+	                                              color-stop(1.0, rgba(1, 1, 1, 0.5))),
+	            /* Second gradient gives the stripped effect */
+	            -gtk-gradient(linear, 0 0, 1 1, color-stop(0.0, @entryselbg-color),
+	                                            color-stop(0.25, @entryselbg-color), color-stop(0.26, shade(@entryselbg-color, 0.96)),
+	                                            color-stop(0.50, shade(@entryselbg-color, 0.96)), color-stop(0.51, @entryselbg-color),
+	                                            color-stop(0.75, @entryselbg-color), color-stop(0.76, shade(@entryselbg-color, 0.96)),
+	                                            color-stop(1.00, shade(@entryselbg-color, 0.96)));
+	/* this gives the border without changing the bounding box */
+	box-shadow: inset 0 0 0 1px shade(@entryselbg-color, 0.7);
+	/* repeat the background because we don't have repeating linear gradient */
+	background-repeat: repeat-x;
+	/* finally, set a fixed size to get the stripe effect realized. 
+	 * The height controls how fat the stripes are. 
+	 * The width controls the slant. */
+    background-size: 40px 200%;
 }
 
 .cell
@@ -476,13 +498,13 @@ row:selected:focused
 
 .menu .menuitem:hover > GtkLabel
 {
-	background-color: @entryselbg-color;
+	background-color: none;
 	color: @entryselfg-color;
 }
 
 .menu >.menubar.menuitem:hover,
 .menubar >.menuitem:hover > GtkLabel {
-	background-color: @entryselbg-color;
+	background-color: none;
 	color: @entryselfg-color;
 	transition: 150ms ease-in-out;
 }
@@ -525,9 +547,14 @@ GtkComboBox .menuitem:hover * {
 	color: @entryselfg-color;
 }
 
+GtkSwitch.trough {
+	border-radius: 0px;
+}
+
 GtkSwitch.trough:active {
 	background: @entryselbg-color;
 	color: @entryselfg-color;
+	box-shadow: inset 0 0 4px 2px shade(@entryselbg-color, 0.7);
 }
 
 /*
